# trustcv

./: .cursorrules  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CV_VERIFICATION_REPORT.md  DEPLOYMENT_CHECKLIST.md  LICENSE  PROJECT_STATUS.md  README.md  SETUP_INSTRUCTIONS.md  SUMMARY.md  deploy.sh  environment.yml  fda_validation_report.json  pyproject.toml  requirements-dev.txt  requirements-frameworks.txt  requirements.txt  setup.py  test_all.py  test_build.py
.github/: copilot-instructions.md
.github/workflows/: deploy-website.yml
docs/: API_REFERENCE.md  BEST_PRACTICES.md  CV_METHODS_CHECKLIST.md  CV_METHODS_TOOLKIT_TABLE.md  CV_SELECTION_GUIDE.md  DATA_LEAKAGE_DETECTION.md  FRAMEWORK_GUIDE.md  LEAKAGE_DETECTION_IMPLEMENTATION.md  ML_TOOLBOX_CV_COMPARISON.md  NAMING_COMPATIBILITY.md  PRACTICAL_CV_GUIDE.md  README.md  README_LEAKAGE_SECTION.md  REGULATORY_CV_GUIDELINES.md  conf.py  iid_splitters.md  index.rst  quickstart_iid.md
examples/: all_cv_methods_demo.py  disease_spread_modeling.py  heart_disease_prediction.py  icu_patient_monitoring.py  keras_skwrap_digits.py  keras_skwrap_mnist.py  keras_wrapper_stress_tests.py  mnist_universal_runner_sklearn_framework.py  multisite_clinical_trial.py
notebooks/: 01_CV_Basics.ipynb  01_IID_Methods_Showcase.ipynb  02_Advanced_Workflow_UniversalRunner.ipynb  02_Patient_Level_CV.ipynb  03_Showcases TrustCVValidator.ipynb  03_Temporal_Medical.ipynb  04_Nested_CV.ipynb  04_TrustCVValidator_IID_Comparison.ipynb  05_ diffrent_CrossValidation_Comparison.ipynb  05_CrossValidation_Comparison.ipynb  05_Spatial_Methods.ipynb  06_Advanced_Methods.ipynb  06_TrustCV_DeepLearning_Showcase_with_Glossary.ipynb  06_multiple_modalities_and_tasks.ipynb  07_Bootstrap_Methods.ipynb  07_trustcv_grouped_cv_medical.ipynb  08_Hierarchical_Methods.ipynb  09_Comprehensive_CV_Comparison.ipynb  10_Data_Leakage_Consequences.ipynb  11_Data_Leakage_Tutorial.ipynb  IID_Methods_Showcase.ipynb  Test1.ipynb  TrustCV_Medical_DeepLearning_Showcase.ipynb  TrustCV_NoIndexableHelpers_Showcase.ipynb  TrustCV_NoIndexableHelpers_Showcase_with_Glossary.ipynb  TrustCV_NoManualCV_KerasSkWrap_Showcase.ipynb
notebooks/catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/fold-0/learn/: events.out.tfevents
notebooks/catboost_info/fold-0/test/: events.out.tfevents
notebooks/catboost_info/fold-1/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/fold-1/learn/: events.out.tfevents
notebooks/catboost_info/fold-1/test/: events.out.tfevents
notebooks/catboost_info/fold-2/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/fold-2/learn/: events.out.tfevents
notebooks/catboost_info/fold-2/test/: events.out.tfevents
notebooks/catboost_info/fold-3/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/fold-3/learn/: events.out.tfevents
notebooks/catboost_info/fold-3/test/: events.out.tfevents
notebooks/catboost_info/fold-4/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/fold-4/learn/: events.out.tfevents
notebooks/catboost_info/fold-4/test/: events.out.tfevents
notebooks/reports/: breast_cancer_regulatory6.html  heart_disease_fda1.html  trustcv_regulatory_report.html
scripts/: insert_ts_visual_helpers.py  patch_cv_methods_cell.py  patch_notebook_optional_imports.py  patch_notebook_replace_get_auc_fallback.py  patch_plotting_loop_fix.py  patch_roc_auc_plot_cell.py  patch_temporal_plot.py  patch_temporal_plot_v2.py  patch_temporal_visual_cell.py  patch_temporal_visual_cell_fix2.py  save_workspace_zip.py
scripts/devtools/: __assert_aliases.py  __check_aliases.py  __check_compile.py  __check_compile_tests.py  __check_compile_validators.py  __check_splitter_aliases.py  __nb_clean.py  __nb_patch_dynamic_keys.py  __nb_patch_report_cell.py  __nb_reload_insert.py  __orig_base_py.txt
tests/: test_all_29_methods.py  test_dashboard.py  test_data_leakage.py  test_framework_integration.py  test_grouped_methods.py  test_iid_methods.py  test_integration_examples.py  test_keras_classifier_wrap_digits.py  test_keras_multi_input.py  test_keras_skwrap_digits.py  test_keras_wrapper_stress.py  test_leakage_improvements.py  test_multilabel_splitter.py  test_multilabel_stratified_group_kfold.py  test_prediction_coercion.py  test_scoring_multiclass.py  test_temporal_methods.py  test_temporal_param_aliases.py
trustcv/: __init__.py  validators.py
trustcv/checkers/: __init__.py  balance.py  leakage.py
trustcv/core/: __init__.py  base.py  callbacks.py  runner.py
trustcv/datasets/: __init__.py  loaders.py
trustcv/frameworks/: __init__.py  monai.py  pytorch.py  tensorflow.py  tensorflow_sklearn.py
trustcv/metrics/: __init__.py  clinical.py  medical_metrics.py
trustcv/reporting/: regulatory_report.py  universal_report.py
trustcv/splitters/: __init__.py  grouped.py  iid.py  multilabel.py  multilabel_group.py  spatial.py  temporal.py
trustcv/visualization/: __init__.py  plots.py
website/: ai-agents.html  api-schema.json  best-practices.html  cv-selection-guide.html  data-leakage.html  demonstrations.html  frameworks.html  getting-started.html  index.html  llms-full.txt  llms.txt  methods-comparison.html  notebooks.html  quiz.html  regulatory-cv-tutorial.html  regulatory-report.html  tutorials.html  update_navigation.html
website/css/: style.css  tutorials.css
website/docs/: API_REFERENCE.html  LICENSE.html
website/js/: cv-animation.js  cv-grouped.js  cv-homepage-animation.js  cv-spatial.js  cv-temporal.js  cv-visualizations.js  main.js  navigation.js  regulatory-report.js  theme.js  tooltips.js  tutorials.js
