[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustcv"
version = "1.0.6"
description = "Trustworthy Cross-Validation: Framework-agnostic CV with data leakage detection"
readme = "README.md"
authors = [
    {name = "SMAILE (Stockholm Medical AI and Learning Environments), Karolinska Institutet"}
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["cross-validation", "medical", "machine-learning", "healthcare", "validation"]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "joblib>=1.0.0",
    "tqdm>=4.60.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ki-smile/trustcv"
Documentation = "https://ki-smile.github.io/trustcv"
Repository = "https://github.com/ki-smile/trustcv"
"Bug Tracker" = "https://github.com/ki-smile/trustcv/issues"
"SMAILE Lab" = "https://smile.ki.se"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "black>=22.0.0",
    "isort>=5.10.0",
    "bandit>=1.7.0",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
    "myst-parser>=0.18.0",
    "nbsphinx>=0.9.0",
]
viz = [
    "bokeh>=2.4.0",
]

# Framework-specific extras
pytorch = [
    "torch",
    "torchvision",
]
tensorflow = [
    "tensorflow>=2.16",
]
monai = [
    "monai>=1.0.0",
    "nibabel>=3.2.0",
]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.8.0",
    "optax>=0.1.0",
]

# Convenience extra for installing everything above
all = [
    "torch",
    "torchvision",
    "tensorflow>=2.16",
    "monai>=1.0.0",
    "nibabel>=3.2.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.8.0",
    "optax>=0.1.0",
    "pytest>=7.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "black>=22.0.0",
    "sphinx>=4.5.0",
    "nbsphinx>=0.9.0",
    "pytest-cov>=3.0.0",
]
multilabel = [
    "iterative-stratification>=0.1.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trustcv*"]
exclude = ["tests*", "docs*", "examples*", "notebooks*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["trustcv"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
ignore_errors = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
